Commiting tests